<resources>
    <string name="hello_world">Hello !</string>
    <string name="app_name">Color tiles</string>
    <string name="choisir_une_taille_pour_jouer">Choose a size</string>
    <string name="ecran_de_selection">Select Screen</string>
    <string name="dimension_6x6">Size 6x6</string>
    <string name="dimension_4x4">Size 4x4</string>
    <string name="dimension_8x8">Size 8x8</string>
    <string name="score">Scoreboard</string>
    <string name="back">back</string>
    <string name="presentation">The game Color Tiles was developed by:</string>
    <string name="name">Theo, Adrien and Florian</string>
    <string name="best">Best score</string>

    <string name="ruleTitle"> Game rules </string>
    <string name="rule1Title"> Three in a row </string>
    <string name="rule1"> You cannot have three tiles of the same color in a row </string>
    <string name="rule2Title"> Double column/row </string>
    <string name="rule2"> Cannot have the same two columns or rows </string>
    <string name="rule3Title"> Color balance </string>
    <string name="rule3"> There must be an equal number of colors in each row and column </string>
</resources>