<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0000000">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/votre_nom_textView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/best"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <LinearLayout
            android:id="@+id/FragLayout"
            android:layout_width="match_parent"
            android:layout_height="324dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:background="@drawable/button_style"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>